--- a/signup.html
+++ b/signup.html
@@ -57,7 +57,7 @@ function signup(e) {
     }
 
     userArr.push(usercred);
-
+    console.log(userArr)
     localStorage.setItem("userData",JSON.stringify(userArr));
 
     alert("Registered Successfull")
