--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/signup.css">
+    <link rel="stylesheet" href="./styles/login.css">
     <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script
@@ -21,35 +21,24 @@
   <body>
     <div id="navbar"></div>
     <div class="main">
+
       <div>
         <div class="sign">
           <button><a href="signup.html">New to Lyst?</a> </button>
           <button><a href="login.html">Already a member</a> </button>
         </div>
 
-        <div><h3>Search thousands of fashion brands and stores all in one place</h3>
-          <p>We just need a few details from you first.</p></div>
-
+        <div><h3>Sign in</h3></div>
         <form id="form">
           <label>Email address</label>
           <input type="text" id="name" placeholder="Enter your email address" />
           <label>Password</label>
           <input type="text" id="password" placeholder="Enter your password">
-          <div id="ss"></div>
-          <input type="checkbox" name="marketing_emails" id="box">
-          <label>I would like to hear about products, services, and sales,
-            including personalized email alerts from Lyst. You can unsubscribe
-            at any time.</label>
-          <input type="submit" value="Join Lyst" />
+          <input type="submit" value="Sign in" />
         </form>
         <p>or</p>
-        <button><a href=""> Continue With Facebook</a></button>
-        <button> <a href=""> Continue With Google </a></button>
-
-        <div class="down">By creating an account, you consent to Lyst’s<span>
-            Terms & Conditions.</span>
-          To learn more about how Lyst uses and protects your personal data,
-          please read Lyst’s<span> Privacy Policy.</span></div>
+        <button><a href="https://www.facebook.com/"> Continue With Facebook</a></button>
+        <button> <a href="https://mail.google.com/"> Continue With Google </a></button>
       </div>
 
       <div class="right">
@@ -71,7 +60,7 @@
   </body>
 </html>
 
-<script src="./scripts/signup.js"></script>
+<script src="./scripts/login.js"></script>
 <script
   src="https://kit.fontawesome.com/24c494a6b6.js"
   crossorigin="anonymous"></script>
